<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/nubia_category_touchscreen"
        android:layout="@layout/preference_category_custom">

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_double_tap_to_wake"
            android:title="@string/nubia_double_tap_to_wake"
            android:summary="@string/nubia_double_tap_to_wake_summary" />

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_high_touch_sample_rate"
            android:title="@string/nubia_high_touch_sample_rate"
            android:summary="@string/nubia_high_touch_sample_rate_summary" />

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_high_touch_sensitivity"
            android:title="@string/nubia_high_touch_sensitivity"
            android:summary="@string/nubia_high_touch_sensitivity_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/nubia_category_misc"
        android:layout="@layout/preference_category_custom">

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_touchscreen_game_mode"
            android:title="@string/nubia_touchscreen_game_mode"
            android:summaryOn="@string/nubia_touchscreen_game_mode_summary_on" />

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_shoulder_btn"
            android:title="@string/nubia_shoulder_btn"
            android:summary="@string/nubia_shoulder_btn_summary" />

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_bypass_charger"
            android:title="@string/nubia_bypass_charger"
            android:summaryOff="@string/nubia_bypass_charger_summary_off"
            android:summaryOn="@string/nubia_bypass_charger_summary_on" />

        <ListPreference
            android:layout="@layout/preference_list_custom"
            android:defaultValue="0"
            android:entries="@array/pref_nubia_fan"
            android:entryValues="@array/pref_nubia_fan_values"
            android:key="nubia_fan_speed"
            android:title="@string/nubia_fan_speed"
            android:summary="@string/nubia_fan_speed_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/nubia_category_leds"
        android:layout="@layout/preference_category_custom">

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_redmagic_logo_breath"
            android:title="@string/nubia_redmagic_logo_breath" />

        <ListPreference
            android:layout="@layout/preference_list_custom"
            android:defaultValue="-1"
            android:entries="@array/pref_nubia_redmagic_led"
            android:entryValues="@array/pref_nubia_redmagic_led_values"
            android:key="nubia_redmagic_led"
            android:title="@string/nubia_redmagic_led" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/nubia_category_boosts"
        android:layout="@layout/preference_category_custom">

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_boost_cpu"
            android:title="@string/nubia_boost_cpu" />

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_boost_cache"
            android:title="@string/nubia_boost_cache" />

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_boost_gpu"
            android:title="@string/nubia_boost_gpu" />

        <SwitchPreference
            android:layout="@layout/preference_switch_custom"
            android:defaultValue="false"
            android:key="nubia_boost_ufs"
            android:title="@string/nubia_boost_ufs"
            android:summaryOn="@string/nubia_boost_ufs_summary_on" />
    </PreferenceCategory>

</PreferenceScreen>
